--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         .slot-reel { transition: transform 0.3s ease-out; }
         .slot-item { height: 40px; display: flex; align-items: center; justify-content: center; font-size: 0.9rem; color: #888; }
         .slot-item.active { color: var(--text-dark); font-weight: bold; font-size: 1.1rem; }
-        .slot-overlay { position: absolute; top: 40px; left: 0; width: 100%; height: 40px; pointer-events: none; border-top: 1px solid rgba(0,0,0,0.1); border-bottom: 1px solid rgba(0,0,0,0.1); background: rgba(255, 158, 103, 0.05); }
+        .slot-overlay { position: absolute; top: 40px; left: 0; width: 100%; height: 40px; pointer-events: none; border-top: 1px solid rgba(0,0,0,0.1); border-bottom: 1px solid rgba(0,0,0,0.1); background: rgba(0, 0, 0, 0.03); }
 
         .btn-main { width: 100%; margin-top: 10px; padding: 12px; background: var(--text-dark); color: white; border: none; border-radius: 10px; font-family: inherit; font-size: 0.9rem; box-shadow: 0 4px 0 #222; cursor: pointer; flex-shrink: 0; position: relative; transition: transform 0.1s ease, box-shadow 0.1s ease; }
         .btn-main:active { transform: translateY(4px); box-shadow: 0 0 0 #222; }
@@ -164,7 +164,7 @@
 
 <script>
     let step = 0;
-    let startY = 0, moveY = 0; // 修正：未定義変数の宣言を追加
+    let startY = 0, moveY = 0; 
     const data = { q1:'', q2:[], q3:'', q4:'', q5:'', q6:'', q7:'', q8:'', q9:'' };
     const options = { 4: ['今すぐ', '15分後', '30分後', '1時間後'], 5: ['特になし', '～1000円', '～2000円', '～3000円', '～5000円', '～10000円', '上限なし'] };
     const slotState = { 4: 0, 5: 0 };
@@ -176,7 +176,6 @@
     function uploadBG(input) { if (input.files?.[0]) { const reader = new FileReader(); reader.onload = (e) => applyBG(e.target.result); reader.readAsDataURL(input.files[0]); } }
     function loadBG() { ['p1', 'p2', 'p3'].forEach(id => { const saved = localStorage.getItem('sora_preset_v7_' + id); if(saved) document.getElementById(id).style.backgroundColor = saved; }); const savedBG = localStorage.getItem('sora_bg_v7_solid'); if (savedBG) applyBG(savedBG); }
     
-    // 修正：GoogleマップURLを正しい変数展開とドメインに修正
     function openMap(n) { const addr = document.getElementById(`q${n}_free`).value; const url = addr ? `https://www.google.com/maps/search/${encodeURIComponent(addr)}` : `https://www.google.com/maps/`; window.open(url, '_blank'); }
     
     async function getPreciseLocation(n) { const btn = document.getElementById('gps-btn'); const input = document.getElementById(`q${n}_free`); if (!navigator.geolocation) return alert("非対応ブラウザです"); btn.innerText = "取得中..."; navigator.geolocation.getCurrentPosition(async (pos) => { const {latitude: lat, longitude: lon} = pos.coords; try { const res = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${lat}&lon=${lon}&accept-language=ja`); const resData = await res.json(); input.value = resData.display_name || `${lat}, ${lon}`; } catch (e) { input.value = `${lat}, ${lon}`; } data[`q${n}`] = input.value; btn.innerText = "取得完了！"; setTimeout(next, 600); }, () => { alert("失敗しました"); btn.innerText = "現在地を取得"; }, { enableHighAccuracy: true, timeout: 5000 }); }
