--- a/index.html
+++ b/index.html
@@ -216,6 +216,33 @@
             `; 
         } 
     }
+
+    // --- 追加修正箇所 ---
+    function getPreciseLocation(n) {
+        if (!navigator.geolocation) return alert("GPSが使えないようです");
+        const btn = document.getElementById('gps-btn');
+        btn.innerText = "取得中...";
+        navigator.geolocation.getCurrentPosition(
+            (pos) => {
+                const val = `現在地(緯度:${pos.coords.latitude.toFixed(4)},経度:${pos.coords.longitude.toFixed(4)})`;
+                data[`q${n}`] = val;
+                btn.innerText = "取得完了！";
+                setTimeout(next, 500);
+            },
+            () => {
+                alert("位置情報が取得できませんでした。許可されているか確認してください。");
+                btn.innerText = "現在地を取得";
+            },
+            { enableHighAccuracy: true }
+        );
+    }
+
+    function openMap(n) {
+        window.open('https://www.google.com/maps', '_blank');
+        alert("地図で住所を確認して、入力欄にコピー＆ペーストしてください！");
+    }
+    // ------------------
+
     async function finish() { const text = `【注文票】\n■構成：${data.q1}\n■目的：${data.q2.join('・')}\n■場所：${data.q3}\n■時間：${data.q4}\n■予算：${data.q5}\n■移動：${data.q6}\n■テーマ：${data.q7}\n■こだわり：${data.q8}\n■NG：${data.q9}`; try { await navigator.clipboard.writeText(text); alert("コピーしました！Geminiに貼り付けてね."); window.location.href = "https://gemini.google.com/"; } catch (err) { window.location.href = "https://gemini.google.com/"; } }
     window.onload = initSlots;
 </script>
