--- a/index.html
+++ b/index.html
@@ -85,11 +85,9 @@
         }
         .btn-dot-ok:active { transform: translateY(4px); box-shadow: 0 0 0 #4a7a66; }
         
-        /* 1ピクセルの美しさにこだわった黄金比ドットチェック */
         .pixel-check {
             width: 16px; height: 16px; background-color: white;
             clip-path: polygon(
-                /* 外枠の定義：左から右へ階段状に */
                 0% 50%, 12.5% 50%, 12.5% 62.5%, 25% 62.5%, 25% 75%, 37.5% 75%, 37.5% 87.5%, 50% 87.5%, 
                 50% 75%, 62.5% 75%, 62.5% 62.5%, 75% 62.5%, 75% 50%, 87.5% 50%, 87.5% 37.5%, 100% 37.5%, 
                 100% 12.5%, 87.5% 12.5%, 87.5% 25%, 75% 25%, 75% 37.5%, 62.5% 37.5%, 62.5% 50%, 50% 50%, 
@@ -217,14 +215,18 @@
         } 
     }
 
-    // --- 追加修正箇所 ---
+    // --- 現在地の修正箇所 ---
     function getPreciseLocation(n) {
         if (!navigator.geolocation) return alert("GPSが使えないようです");
         const btn = document.getElementById('gps-btn');
         btn.innerText = "取得中...";
         navigator.geolocation.getCurrentPosition(
             (pos) => {
-                const val = `現在地(緯度:${pos.coords.latitude.toFixed(4)},経度:${pos.coords.longitude.toFixed(4)})`;
+                const lat = pos.coords.latitude;
+                const lng = pos.coords.longitude;
+                // 「現在地」という文字に、場所を特定するためのGoogleマップのリンクを添える
+                // これにより、Gemini側で「現在地（付近の住所リンク）」として認識されます
+                const val = `現在地 (参照: https://www.google.com/maps?q=${lat},${lng})`;
                 data[`q${n}`] = val;
                 btn.innerText = "取得完了！";
                 setTimeout(next, 500);
@@ -241,7 +243,7 @@
         window.open('https://www.google.com/maps', '_blank');
         alert("地図で住所を確認して、入力欄にコピー＆ペーストしてください！");
     }
-    // ------------------
+    // ----------------------
 
     async function finish() { const text = `【注文票】\n■構成：${data.q1}\n■目的：${data.q2.join('・')}\n■場所：${data.q3}\n■時間：${data.q4}\n■予算：${data.q5}\n■移動：${data.q6}\n■テーマ：${data.q7}\n■こだわり：${data.q8}\n■NG：${data.q9}`; try { await navigator.clipboard.writeText(text); alert("コピーしました！Geminiに貼り付けてね."); window.location.href = "https://gemini.google.com/"; } catch (err) { window.location.href = "https://gemini.google.com/"; } }
     window.onload = initSlots;
