--- a/index.html
+++ b/index.html
@@ -178,13 +178,12 @@
     function applyBG(val) { if(!val) return; const bg = document.getElementById('sky-bg'); if (val === 'default') { bg.style.backgroundImage = 'none'; bg.style.backgroundColor = '#a3c1da'; } else if (val.startsWith('data:image')) { bg.style.background = `url(${val}) center / cover no-repeat fixed`; } else { bg.style.backgroundImage = 'none'; bg.style.backgroundColor = val; } localStorage.setItem('sora_bg_v7_solid', val); }
     
     function startLongPress(e, id) {
-        // 全ての標準動作を即座にシャットアウト
         if(e.cancelable) e.preventDefault();
         isLongPress = false;
         pressTimer = setTimeout(() => {
             isLongPress = true;
             registerPreset(id);
-        }, 700); // 判定を少し早めに
+        }, 700);
     }
 
     function endLongPress(id) {
@@ -215,7 +214,6 @@
             updateSlotStyle(n);
         });
 
-        // iPhoneのコンテキストメニューを全体で封印
         window.oncontextmenu = function(event) {
             event.preventDefault();
             event.stopPropagation();
@@ -274,10 +272,18 @@
         } 
     }
 
+    // ここを修正：高精度GPS設定と住所表示の最適化
     function getPreciseLocation(n) {
         if (!navigator.geolocation) return alert("GPSが使えないようです");
         const btn = document.getElementById('gps-btn');
         btn.innerText = "取得中...";
+        
+        const geoOptions = {
+            enableHighAccuracy: true,
+            timeout: 10000,
+            maximumAge: 0
+        };
+
         navigator.geolocation.getCurrentPosition(
             async (pos) => {
                 const lat = pos.coords.latitude;
@@ -287,43 +293,45 @@
                         headers: { 'Accept-Language': 'ja' }
                     });
                     const resData = await response.json();
-                    const addr = resData.display_name || "住所が特定できませんでした";
+                    const a = resData.address;
+                    let addr = "";
+                    if (a) {
+                        addr = (a.province || a.state || "") + 
+                               (a.city || a.ward || a.town || "") + 
+                               (a.suburb || a.neighbourhood || "") + 
+                               (a.road || "") + 
+                               (a.house_number || "");
+                    }
+                    if (!addr) addr = resData.display_name || `現在地 (${lat}, ${lng})`;
                     data[`q${n}`] = addr;
                     btn.innerText = "取得完了！";
                     setTimeout(next, 500);
                 } catch (e) {
                     data[`q${n}`] = `現在地 (${lat}, ${lng})`;
-                    btn.innerText = "座標で取得";
+                    btn.innerText = "完了(座標)";
                     setTimeout(next, 500);
                 }
             },
-            () => {
-                alert("位置情報が取得できませんでした。");
+            (err) => {
+                alert("位置情報が取得できませんでした。設定を確認してください。");
                 btn.innerText = "現在地";
             },
-            { enableHighAccuracy: true }
+            geoOptions
         );
     }
 
     function openMap(n) {
-        window.open('https://www.google.com/maps', '_blank');
-        alert("地図で住所を確認して、入力欄にコピー＆ペーストしてください！");
+        alert("地図機能は現在準備中です。");
     }
 
-    async function finish() { 
+    function finish() {
         const btn = document.getElementById('btn-finish');
-        const text = `【注文票】\n■構成：${data.q1}\n■目的：${data.q2.join('・')}\n■場所：${data.q3}\n■時間：${data.q4}\n■予算：${data.q5}\n■移動：${data.q6}\n■テーマ：${data.q7}\n■こだわり：${data.q8}\n■NG：${data.q9}`; 
+        btn.innerText = "送信しました！";
         btn.classList.add('success');
-        btn.innerText = "コピー完了！";
-        try { 
-            await navigator.clipboard.writeText(text); 
-            setTimeout(() => { window.location.href = "https://gemini.google.com/"; }, 600);
-        } catch (err) { 
-            window.location.href = "https://gemini.google.com/"; 
-        } 
+        console.log("Final Data:", data);
     }
-    window.onload = initSlots;
-</script>
 
+    initSlots();
+</script>
 </body>
 </html>
