--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
         navigator.clipboard.writeText(text).then(() => {
             const btn = document.getElementById('btn-finish');
-            btn.innerText = "コピー完了！Geminiへ...";
+            btn.innerText = "よみこみちゅう・・・";
             btn.classList.add('success');
             
             setTimeout(() => {
