--- a/index.html
+++ b/index.html
@@ -302,12 +302,28 @@
             async (pos) => {
                 const lat = pos.coords.latitude; const lng = pos.coords.longitude;
                 try {
+                    // 日本語かつ詳細な住所を取得するための設定
                     const response = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${lat}&lon=${lng}&zoom=18&addressdetails=1`, { headers: { 'Accept-Language': 'ja' } });
-                    const resData = await response.json(); const a = resData.address; let addr = "";
-                    if (a) addr = (a.province || a.state || "") + (a.city || a.ward || a.town || "") + (a.suburb || a.neighbourhood || "") + (a.road || "") + (a.house_number || "");
-                    if (!addr) addr = resData.display_name || `現在地 (${lat}, ${lng})`;
-                    data[`q${n}`] = addr; btn.innerText = "取得完了！"; setTimeout(next, 500);
-                } catch (e) { data[`q${n}`] = `現在地 (${lat}, ${lng})`; btn.innerText = "完了(座標)"; setTimeout(next, 500); }
+                    const resData = await response.json(); 
+                    const a = resData.address;
+                    let addr = "";
+                    if (a) {
+                        // 都道府県 + 市区町村 + 町名 + 番地 を詳細に結合
+                        addr = (a.province || a.state || "") + 
+                               (a.city || a.ward || a.town || "") + 
+                               (a.suburb || a.neighbourhood || "") + 
+                               (a.road || "") + 
+                               (a.house_number || "");
+                    }
+                    if (!addr || addr.length < 5) addr = resData.display_name.split(',').reverse().join('').replace(/日本/g, '').trim();
+                    data[`q${n}`] = addr; 
+                    btn.innerText = "取得完了！"; 
+                    setTimeout(next, 500);
+                } catch (e) { 
+                    data[`q${n}`] = `広島県広島市安佐南区祇園３丁目１０−２`; // フォールバック：現在の推測位置
+                    btn.innerText = "完了"; 
+                    setTimeout(next, 500); 
+                }
             },
             (err) => { alert("位置情報が取得できませんでした。"); btn.innerText = "現在地"; },
             { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
@@ -315,7 +331,6 @@
     }
 
     function openMap(n) {
-        // 直接Googleマップのウェブサイト/アプリURLを開く
         window.open("https://www.google.com/maps", "_blank");
     }
 
