--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         if (currentBGValue.startsWith('data:image')) {
             dot.style.backgroundImage = `url(${currentBGValue})`;
             dot.style.backgroundSize = 'cover';
-            localStorage.setItem('sora_img_preset_v7_' + selectedPresetId, currentBGValue);
+            localStorage.setItem('sora_img_preset_v7_') + selectedPresetId, currentBGValue;
             localStorage.removeItem('sora_preset_v7_' + selectedPresetId);
         } else {
             dot.style.backgroundImage = 'none';
@@ -302,30 +302,31 @@
             async (pos) => {
                 const lat = pos.coords.latitude; const lng = pos.coords.longitude;
                 try {
-                    // 日本語かつ詳細な住所を取得するための設定
+                    // 精度向上のためNominatimに詳細リクエスト
                     const response = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${lat}&lon=${lng}&zoom=18&addressdetails=1`, { headers: { 'Accept-Language': 'ja' } });
                     const resData = await response.json(); 
                     const a = resData.address;
                     let addr = "";
                     if (a) {
-                        // 都道府県 + 市区町村 + 町名 + 番地 を詳細に結合
-                        addr = (a.province || a.state || "") + 
-                               (a.city || a.ward || a.town || "") + 
-                               (a.suburb || a.neighbourhood || "") + 
-                               (a.road || "") + 
-                               (a.house_number || "");
+                        const postCode = a.postcode ? `〒${a.postcode} ` : "";
+                        const pref = a.province || a.state || "";
+                        const city = a.city || a.ward || a.town || a.village || "";
+                        const district = a.suburb || a.neighbourhood || "";
+                        const road = a.road || "";
+                        const houseNumber = a.house_number || "";
+                        addr = postCode + pref + city + district + road + houseNumber;
                     }
-                    if (!addr || addr.length < 5) addr = resData.display_name.split(',').reverse().join('').replace(/日本/g, '').trim();
+                    if (!addr || addr.length < 5) addr = resData.display_name || `現在地 (${lat}, ${lng})`;
                     data[`q${n}`] = addr; 
                     btn.innerText = "取得完了！"; 
                     setTimeout(next, 500);
                 } catch (e) { 
-                    data[`q${n}`] = `広島県広島市安佐南区祇園３丁目１０−２`; // フォールバック：現在の推測位置
-                    btn.innerText = "完了"; 
+                    data[`q${n}`] = `現在地 (${lat}, ${lng})`; 
+                    btn.innerText = "完了(座標)"; 
                     setTimeout(next, 500); 
                 }
             },
-            (err) => { alert("位置情報が取得できませんでした。"); btn.innerText = "現在地"; },
+            (err) => { alert("位置情報が取得できませんでした。設定を確認してね。"); btn.innerText = "現在地"; },
             { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
         );
     }
