--- a/index.html
+++ b/index.html
@@ -343,9 +343,14 @@
             try {
                 const response = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${lat}&lon=${lng}&zoom=18&addressdetails=1`, { headers: { 'Accept-Language': 'ja' } });
                 const resData = await response.json(); 
-                let addr = resData.address ? `${resData.address.province || ""}${resData.address.city || ""}${resData.address.suburb || ""}${resData.address.road || ""}${resData.address.house_number || ""}` : `現在地(${lat},${lng})`;
-                data[`q${n}`] = addr; btn.innerText = "完了！"; setTimeout(next, ACTION_DELAY + 200);
-            } catch (e) { data[`q${n}`] = `現在地(${lat},${lng})`; btn.innerText = "座標で完了"; setTimeout(next, ACTION_DELAY + 200); }
+                let addr = resData.address ? `${resData.address.province || ""}${resData.address.city || ""}${resData.address.suburb || ""}${resData.address.road || ""}${resData.address.house_number || ""}` : `${lat},${lng}`;
+                // 指定の表記「現在地(住所)」に変更
+                data[`q${n}`] = `現在地(${addr})`; 
+                btn.innerText = "完了！"; setTimeout(next, ACTION_DELAY + 200);
+            } catch (e) { 
+                data[`q${n}`] = `現在地(${lat},${lng})`; 
+                btn.innerText = "座標で完了"; setTimeout(next, ACTION_DELAY + 200); 
+            }
         }, () => { alert("取得失敗"); btn.innerText = "現在地"; }, { enableHighAccuracy: true });
     }
 
